# axl-cgp-sui-to-cosmos-sample

./: .gitignore  .gitmodules  README.md
docs/: AXELAR_ITS_ARCHITECTURE_CLARIFICATION.md  SUI_TO_COSMOS_SDK_BRIDGE_ANALYSIS.md  USDRISE_IBC_TOKEN_GUIDE.md  USDRISE_TO_NEUTRON_TRANSFER_GUIDE.md
its_integration/: Move.toml
its_integration/sources/: its_integration.move
its_integration/tests/: its_integration_tests.move
neutron/contracts/usdrise-receiver/: Cargo.toml
neutron/contracts/usdrise-receiver/src/: contract.rs
neutron/scripts/: deploy-neutron.sh
sui-project/: Move.toml
sui-project/sources/: its_integration.move  usdrise.move
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: monitor.ts  register_token.ts  setup.ts  transfer.ts  transfer_with_example_call.ts
usdrise/: Move.toml
usdrise/sources/: usdrise.move
usdrise/tests/: usdrise_tests.move
